# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt
GTest/: CMakeLists.txt  MainTest.cpp
example/: CMakeLists.txt
example/Assets/: Instancing_test.vert  loading.vert
example/src/: main.cpp
src/: Engine.cpp  Engine.h  LOG.h  Other.h  debug.h
src/Audio/: Audio.h  Sound.cpp  Sound.h
src/Physics/: Physics.cpp  Physics.h
src/Render/: Font.cpp  Font.h  MergedRender.cpp  MergedRender.h  Particles.cpp  Particles.h  Render.h  Texture.cpp  Texture.h
src/Render/UI/: Button.cpp  Button.h  UI.cpp  UI.h
src/System/: INIReader.cpp  INIReader.h  Localization.cpp  Localization.h  SoundFile.cpp  SoundFile.hpp  SystemAdapter.cpp  SystemAdapter.h  TextUtils.h  ZipArchive.cpp  ZipArchive.h
